--- a/PDR.PatientBooking.Service/PDR.PatientBooking.Service.csproj
+++ b/PDR.PatientBooking.Service/PDR.PatientBooking.Service.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\PDR.PatientBooking.Data\PDR.PatientBooking.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="BookingServices\NewFolder\" />
+  </ItemGroup>
+
 </Project>
